--- a/app/src/main/res/layout/filling_test.xml
+++ b/app/src/main/res/layout/filling_test.xml
@@ -3,13 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingHorizontal="10dp">
 
-    <View
-        android:id="@+id/divider"
+    <ProgressBar
+        android:id="@+id/testProgressBar"
+        style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="0dp"
-        android:layout_height="6dp"
-        android:background="#E0E0E0"
+        android:layout_marginBottom="15dp"
+        android:max="100"
+        android:progress="0"
+        android:progressDrawable="@drawable/progress_gradient"
+        android:layout_height="8dp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +26,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/divider"
+        app:layout_constraintTop_toBottomOf="@id/testProgressBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -88,6 +93,7 @@
 
         </RadioGroup>
 
+        <!-- Блок объяснения, изначально скрыт -->
         <LinearLayout
             android:id="@+id/explanationContainer"
             android:layout_width="match_parent"
