--- a/app/src/main/res/layout/item_test.xml
+++ b/app/src/main/res/layout/item_test.xml
@@ -119,6 +119,7 @@
                     android:layout_marginTop="8dp">
 
                     <View
+                        android:id="@+id/continueButtonBg"
                         android:layout_width="match_parent"
                         android:layout_height="35dp"
                         android:background="@drawable/bg_button"
@@ -127,6 +128,7 @@
                         android:textSize="13sp" />
 
                     <TextView
+                        android:id="@+id/continueButtonText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
